adding support for webcam

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,21 @@
-# Camera URL (RTSP, HTTP, or device number for webcams)
-CAMERA_URL=rtsp://username:password@camera-ip:554/stream
+# Camera Configuration
+# -------------------
+# Option 1: IP Camera - use RTSP/HTTP URL
+# CAMERA_URL=rtsp://username:password@camera-ip:554/stream
 
+# Option 2: Webcam - use 0 for default webcam, 1+ for additional webcams
+# CAMERA_URL=0
+
+# Option 3: Webcam with explicit flag
+USE_WEBCAM=0        # Set to 1 to use webcam instead of IP camera
+WEBCAM_ID=0         # Device ID for webcam (0=default, 1=external, etc.)
+
+# YOLO Model Configuration
+# -----------------------
 # Detection confidence threshold (0.0-1.0)
 CONFIDENCE_THRESHOLD=0.25
 
+# Web Server Configuration
+# ----------------------
 # Flask web server port
 FLASK_PORT=8888
